# bio-algs

./: .gitignore  README.md  output.txt  pyproject.toml
bioalgs/: __init__.py  genome_metrics.py  motifs_deterministic.py  motifs_stochastic.py  sequence_patterns.py
codechallenges/: __init__.py
codechallenges/week1/: 1_2.py  1_2_b.py  1_3_a.py  1_3_b.py  1_3_eb.py  1_4.py  1_4_eb.py  __init__.py  quiz_runner.py
codechallenges/week1/datasets/: dataset_30272_13.txt  dataset_30272_6.txt  dataset_30273_2.txt  dataset_30273_5.txt  dataset_30274_5.txt
codechallenges/week2/: 1.6.py  1.7.py  1_3.py  1_3_eb.py  1_4_a.py  1_4_b.py  1_4_c.py  1_4_d.py  1_4_e.py  1_4_eb.py  quiz_runner.py
codechallenges/week2/datasets/: dataset_30277_10.txt  dataset_30278_10.txt  dataset_30278_3.txt  dataset_30278_4.txt  dataset_30278_6.txt  dataset_30278_9.txt  dataset_30282_4.txt
codechallenges/week3/: 1.2.py  1_3.py  1_4.py  1_5_a.py  1_5_b.py  1_6.py  1_7.py  quiz_runner.py
codechallenges/week3/datasets/: dataset_30302_8.txt  dataset_30304_9.txt  dataset_30305_3.txt  dataset_30305_5.txt  dataset_30306_9.txt  dataset_30312_1.txt
codechallenges/week4/: 1_1.py  1_3.py
codechallenges/week4/datasets/: dataset_30307_5.txt  dataset_30309_11.txt
tests/: test_genome_metrics.py  test_motifs_deterministic.py  test_motifs_stochastic.py  test_sequence_patterns.py
