[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-algs"
version = "0.1.0"
description = "Bioinformatics practice algorithms and code challenges"
requires-python = ">=3.11"
dependencies = [
	"matplotlib>=3.8"
]

[tool.setuptools.packages.find]
include = ["bioalgs*", "codechallenges*"]
